--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">WiFiLock</string>
-    <string name="hello_world">Hello world!</string>
-
+    <string name="app_name">Smart WiFi Locker</string>
 </resources>
